--- a/views/index.html
+++ b/views/index.html
@@ -64,7 +64,7 @@
 		    				</tr>
 		    			</thead>
 		    			<tbody>
-		    				<tr ng-repeat="user in users" ng-show="users.length">
+		    				<tr ng-repeat="user in users">
 		    					<td>{{user.id}}</td>
 		    					<td>{{user.email_address}}</td>
 		    					<td>{{user.first_name}}</td>
