some clean up added clear button, need to wire up

--- a/views/index.html
+++ b/views/index.html
@@ -49,7 +49,8 @@
 
 					<input type="hidden" ng-model="user.id">
 					<button class="btn btn-success" ng-click="createUser(user)" ng-hide='visible'>Add</button> 
-					<button class="btn btn-info" ng-click="updateUser(user)" ng-show='visible'>Edit</button> 
+					<button class="btn btn-info" ng-click="updateUser(user)" ng-show='visible'>Save</button> 
+					<button class="btn btn-warning" ng-click="clearForm()">Clear</button> 
 		    	</div>
 		    	<div id="edit_users">
 		    		<table class="table table-striped">
