removed id that was not being used

--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
 <body ng-app="userManagement">
 	<div ng-controller="userController" class="container">
 		<br />
-		<div id="top" class="panel panel-info">
+		<div class="panel panel-info">
 			<div class="panel-heading">
 		    	<h3 class="panel-title">User Management</h3>
 		  	</div>
