--- a/views/index.html
+++ b/views/index.html
@@ -106,73 +106,75 @@
 		    		</div>
 
 		    		<br />
-		    		<table class="table table-striped">
-		    			<thead>
-		    				<tr>
-		    					<td>
-		    						<a ng-click="sortType='id'; sortReverse = !sortReverse">User ID
-		    							<span ng-show="sortType == 'id' && sortReverse" class="fa fa-caret-up"></span>
-		    							<span ng-show="sortType == 'id' && !sortReverse" class="fa fa-caret-down"></span>
-		    						</a>
-		    					</td>
+		    		<div class="table-responsive">
+			    		<table class="table table-striped  table-hover">
+			    			<thead>
+			    				<tr>
+			    					<td>
+			    						<a ng-click="sortType='id'; sortReverse = !sortReverse">User ID
+			    							<span ng-show="sortType == 'id' && sortReverse" class="fa fa-caret-up"></span>
+			    							<span ng-show="sortType == 'id' && !sortReverse" class="fa fa-caret-down"></span>
+			    						</a>
+			    					</td>
 
-		    					<td>
-		    						<a ng-click="sortType='email_address'; sortReverse = !sortReverse">
-		    							Email Address
-		    							<span ng-show="sortType == 'email_address' && sortReverse" class="fa fa-caret-up"></span>
-		    							<span ng-show="sortType == 'email_address' && !sortReverse" class="fa fa-caret-down"></span>
-		    						</a>
-								</td>
+			    					<td>
+			    						<a ng-click="sortType='email_address'; sortReverse = !sortReverse">
+			    							Email Address
+			    							<span ng-show="sortType == 'email_address' && sortReverse" class="fa fa-caret-up"></span>
+			    							<span ng-show="sortType == 'email_address' && !sortReverse" class="fa fa-caret-down"></span>
+			    						</a>
+									</td>
 
-		    					<td>
-		    						<a ng-click="sortType='first_name'; sortReverse = !sortReverse">
-		    							First Name
-		    							<span ng-show="sortType == 'first_name' && sortReverse" class="fa fa-caret-up"></span>
-		    							<span ng-show="sortType == 'first_name' && !sortReverse" class="fa fa-caret-down"></span>
-		    						</a>
-		    					</td>
+			    					<td>
+			    						<a ng-click="sortType='first_name'; sortReverse = !sortReverse">
+			    							First Name
+			    							<span ng-show="sortType == 'first_name' && sortReverse" class="fa fa-caret-up"></span>
+			    							<span ng-show="sortType == 'first_name' && !sortReverse" class="fa fa-caret-down"></span>
+			    						</a>
+			    					</td>
 
-		    					<td>
-		    						<a ng-click="sortType='last_name'; sortReverse = !sortReverse">
-		    							Last Name
-		    							<span ng-show="sortType == 'last_name' && sortReverse" class="fa fa-caret-up"></span>
-		    							<span ng-show="sortType == 'last_name' && !sortReverse" class="fa fa-caret-down"></span>
-		    						</a>
-		    					</td>
+			    					<td>
+			    						<a ng-click="sortType='last_name'; sortReverse = !sortReverse">
+			    							Last Name
+			    							<span ng-show="sortType == 'last_name' && sortReverse" class="fa fa-caret-up"></span>
+			    							<span ng-show="sortType == 'last_name' && !sortReverse" class="fa fa-caret-down"></span>
+			    						</a>
+			    					</td>
 
-		    					<td>
-		    						<a ng-click="sortType='date_created'; sortReverse = !sortReverse">
-		    							Date Created
-		    							<span ng-show="sortType == 'date_created' && sortReverse" class="fa fa-caret-up"></span>
-		    							<span ng-show="sortType == 'date_created' && !sortReverse" class="fa fa-caret-down"></span>
-		    						</a>
-		    					</td>
+			    					<td>
+			    						<a ng-click="sortType='date_created'; sortReverse = !sortReverse">
+			    							Date Created
+			    							<span ng-show="sortType == 'date_created' && sortReverse" class="fa fa-caret-up"></span>
+			    							<span ng-show="sortType == 'date_created' && !sortReverse" class="fa fa-caret-down"></span>
+			    						</a>
+			    					</td>
 
-		    					<td>
-		    						<a ng-click="sortType='date_modified'; sortReverse = !sortReverse">
-		    							Last Updated
-		    							<span ng-show="sortType == 'date_modified' && sortReverse" class="fa fa-caret-up"></span>
-		    							<span ng-show="sortType == 'date_modified' && !sortReverse" class="fa fa-caret-down"></span>
-		    						</a>
-		    					</td>
+			    					<td>
+			    						<a ng-click="sortType='date_modified'; sortReverse = !sortReverse">
+			    							Last Updated
+			    							<span ng-show="sortType == 'date_modified' && sortReverse" class="fa fa-caret-up"></span>
+			    							<span ng-show="sortType == 'date_modified' && !sortReverse" class="fa fa-caret-down"></span>
+			    						</a>
+			    					</td>
 
-		    					<td>Edit</td>
-		    					<td>Remove</td>
-		    				</tr>
-		    			</thead>
-		    			<tbody>
-		    				<tr ng-repeat="user in users | orderBy:sortType:sortReverse | filter:searchUsers" ng-show="users.length">
-		    					<td>{{user.id}}</td>
-		    					<td>{{user.email_address}}</td>
-		    					<td>{{user.first_name}}</td>
-		    					<td>{{user.last_name}}</td>
-		    					<td>{{user.date_created}}</td>
-		    					<td>{{user.date_modified}}</td>
-		    					<td><button class="btn btn-small btn-info edit" ng-click="editUser(user)">Edit</button></td>
-		    					<td><button class="btn btn-small btn-danger" ng-click="setInactive(user.id)">Remove</button></td>
-		    				</tr>
-		    			</tbody>
-		    		</table>
+			    					<td>Edit</td>
+			    					<td>Remove</td>
+			    				</tr>
+			    			</thead>
+			    			<tbody>
+			    				<tr ng-repeat="user in users | orderBy:sortType:sortReverse | filter:searchUsers" ng-show="users.length">
+			    					<td>{{user.id}}</td>
+			    					<td>{{user.email_address}}</td>
+			    					<td>{{user.first_name}}</td>
+			    					<td>{{user.last_name}}</td>
+			    					<td>{{user.date_created}}</td>
+			    					<td>{{user.date_modified}}</td>
+			    					<td><button class="btn btn-small btn-info edit" ng-click="editUser(user)">Edit</button></td>
+			    					<td><button class="btn btn-small btn-danger" ng-click="setInactive(user.id)">Remove</button></td>
+			    				</tr>
+			    			</tbody>
+			    		</table>
+		    		</div>
 		    	</div>
 		  	</div>
 		</div>
