--- a/views/index.html
+++ b/views/index.html
@@ -27,6 +27,7 @@
 			<div class="panel-heading">
 		    	<h3 class="panel-title">User Management</h3>
 		  	</div>
+		  	
 		  	<div class="panel-body">
 		    	<form id="add_user" name="userForm" novalidate>
 					<p>Please enter the following information to add a user. <br />
@@ -98,83 +99,84 @@
 		    	<div id="edit_users">
 		    	<br />
 		    		<div class="search">
-		    		     <div class="input-group">
-		    				<div class="input-group-addon"><i class="fa fa-search"></i></div>
-		    		    		<input type="text" class="form-control" placeholder="Search Users" ng-model="searchUsers">
+		    		    <div class="input-group">
+		    				<div class="input-group-addon">
+		    					<i class="fa fa-search"></i>
 		    				</div>
+		    		    	<input type="text" class="form-control" placeholder="Search Users" ng-model="searchUsers">
 		    			</div>
 		    		</div>
+		    	</div>
 
-		    		<br />
-		    		<div class="table-responsive">
-			    		<table class="table table-striped  table-hover">
-			    			<thead>
-			    				<tr>
-			    					<td>
-			    						<a ng-click="sortType='id'; sortReverse = !sortReverse">User ID
-			    							<span ng-show="sortType == 'id' && sortReverse" class="fa fa-caret-up"></span>
-			    							<span ng-show="sortType == 'id' && !sortReverse" class="fa fa-caret-down"></span>
-			    						</a>
-			    					</td>
+		    	<br />
+	    		<div class="table-responsive">
+		    		<table class="table table-striped  table-hover">
+		    			<thead>
+		    				<tr>
+		    					<td>
+		    						<a ng-click="sortType='id'; sortReverse = !sortReverse">User ID
+		    							<span ng-show="sortType == 'id' && sortReverse" class="fa fa-caret-up"></span>
+		    							<span ng-show="sortType == 'id' && !sortReverse" class="fa fa-caret-down"></span>
+		    						</a>
+		    					</td>
 
-			    					<td>
-			    						<a ng-click="sortType='email_address'; sortReverse = !sortReverse">
-			    							Email Address
-			    							<span ng-show="sortType == 'email_address' && sortReverse" class="fa fa-caret-up"></span>
-			    							<span ng-show="sortType == 'email_address' && !sortReverse" class="fa fa-caret-down"></span>
-			    						</a>
-									</td>
+		    					<td>
+		    						<a ng-click="sortType='email_address'; sortReverse = !sortReverse">
+		    							Email Address
+		    							<span ng-show="sortType == 'email_address' && sortReverse" class="fa fa-caret-up"></span>
+		    							<span ng-show="sortType == 'email_address' && !sortReverse" class="fa fa-caret-down"></span>
+		    						</a>
+								</td>
 
-			    					<td>
-			    						<a ng-click="sortType='first_name'; sortReverse = !sortReverse">
-			    							First Name
-			    							<span ng-show="sortType == 'first_name' && sortReverse" class="fa fa-caret-up"></span>
-			    							<span ng-show="sortType == 'first_name' && !sortReverse" class="fa fa-caret-down"></span>
-			    						</a>
-			    					</td>
+		    					<td>
+		    						<a ng-click="sortType='first_name'; sortReverse = !sortReverse">
+		    							First Name
+		    							<span ng-show="sortType == 'first_name' && sortReverse" class="fa fa-caret-up"></span>
+		    							<span ng-show="sortType == 'first_name' && !sortReverse" class="fa fa-caret-down"></span>
+		    						</a>
+		    					</td>
 
-			    					<td>
-			    						<a ng-click="sortType='last_name'; sortReverse = !sortReverse">
-			    							Last Name
-			    							<span ng-show="sortType == 'last_name' && sortReverse" class="fa fa-caret-up"></span>
-			    							<span ng-show="sortType == 'last_name' && !sortReverse" class="fa fa-caret-down"></span>
-			    						</a>
-			    					</td>
+		    					<td>
+		    						<a ng-click="sortType='last_name'; sortReverse = !sortReverse">
+		    							Last Name
+		    							<span ng-show="sortType == 'last_name' && sortReverse" class="fa fa-caret-up"></span>
+		    							<span ng-show="sortType == 'last_name' && !sortReverse" class="fa fa-caret-down"></span>
+		    						</a>
+		    					</td>
 
-			    					<td>
-			    						<a ng-click="sortType='date_created'; sortReverse = !sortReverse">
-			    							Date Created
-			    							<span ng-show="sortType == 'date_created' && sortReverse" class="fa fa-caret-up"></span>
-			    							<span ng-show="sortType == 'date_created' && !sortReverse" class="fa fa-caret-down"></span>
-			    						</a>
-			    					</td>
+		    					<td>
+		    						<a ng-click="sortType='date_created'; sortReverse = !sortReverse">
+		    							Date Created
+		    							<span ng-show="sortType == 'date_created' && sortReverse" class="fa fa-caret-up"></span>
+		    							<span ng-show="sortType == 'date_created' && !sortReverse" class="fa fa-caret-down"></span>
+		    						</a>
+		    					</td>
 
-			    					<td>
-			    						<a ng-click="sortType='date_modified'; sortReverse = !sortReverse">
-			    							Last Updated
-			    							<span ng-show="sortType == 'date_modified' && sortReverse" class="fa fa-caret-up"></span>
-			    							<span ng-show="sortType == 'date_modified' && !sortReverse" class="fa fa-caret-down"></span>
-			    						</a>
-			    					</td>
+		    					<td>
+		    						<a ng-click="sortType='date_modified'; sortReverse = !sortReverse">
+		    							Last Updated
+		    							<span ng-show="sortType == 'date_modified' && sortReverse" class="fa fa-caret-up"></span>
+		    							<span ng-show="sortType == 'date_modified' && !sortReverse" class="fa fa-caret-down"></span>
+		    						</a>
+		    					</td>
 
-			    					<td>Edit</td>
-			    					<td>Remove</td>
-			    				</tr>
-			    			</thead>
-			    			<tbody>
-			    				<tr ng-repeat="user in users | orderBy:sortType:sortReverse | filter:searchUsers" ng-show="users.length">
-			    					<td>{{user.id}}</td>
-			    					<td>{{user.email_address}}</td>
-			    					<td>{{user.first_name}}</td>
-			    					<td>{{user.last_name}}</td>
-			    					<td>{{user.date_created}}</td>
-			    					<td>{{user.date_modified}}</td>
-			    					<td><button class="btn btn-small btn-info edit" ng-click="editUser(user)">Edit</button></td>
-			    					<td><button class="btn btn-small btn-danger" ng-click="setInactive(user.id)">Remove</button></td>
-			    				</tr>
-			    			</tbody>
-			    		</table>
-		    		</div>
+		    					<td>Edit</td>
+		    					<td>Remove</td>
+		    				</tr>
+		    			</thead>
+		    			<tbody>
+		    				<tr ng-repeat="user in users | orderBy:sortType:sortReverse | filter:searchUsers" ng-show="users.length">
+		    					<td>{{user.id}}</td>
+		    					<td>{{user.email_address}}</td>
+		    					<td>{{user.first_name}}</td>
+		    					<td>{{user.last_name}}</td>
+		    					<td>{{user.date_created}}</td>
+		    					<td>{{user.date_modified}}</td>
+		    					<td><button class="btn btn-small btn-info edit" ng-click="editUser(user)">Edit</button></td>
+		    					<td><button class="btn btn-small btn-danger" ng-click="setInactive(user.id)">Remove</button></td>
+		    				</tr>
+		    			</tbody>
+		    		</table>
 		    	</div>
 		  	</div>
 		</div>
