Added error functions in the angular service for the http request's just in case the request fails due to 404 or other errors

--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
           <strong>{{msg}}</strong>
         </div>
 
-        <div ng-show="showError" class="alert alert-danger">
+        <div ng-show="ShowFailure" class="alert alert-danger">
           <strong>{{msg}}</strong>
         </div>
 
